# portfolio

./: .editorconfig  .env.development  .env.example  .env.local.example  .env_example  .gitcommitmessage  .gitignore  .prettierignore  .prettierrc  .trivy.yaml  .trivyignore  AGENTS.md  CLAUDE.md  Caddyfile  Caddyfile.ati.ee  Caddyfile.internal  Caddyfile.local  Dockerfile  Dockerfile.backend  Dockerfile.caddy  Dockerfile.frontend  Dockerfile.keycloak  GEMINI.md  README.md  TAILWIND_MIGRATION_PLAN.md  TEST_REVIEW_CHECKLIST.md  analyze-comments.sh  build.gradle.kts  clean.sh  code.py  comment-analysis.txt  compose.yaml  deploy.sh  detekt.yml  docker-compose-monitoring.yml  docker-compose.ati.ee.yml  docker-compose.e2e-minimal.yml  docker-compose.e2e.yml  docker-compose.local.yml  docker-compose.yml  (+41 more)
.github/: copilot-instructions.md  dependabot.yml
.husky/: pre-commit
captcha-solver/: Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  test_captcha_integration.py
cloudflare-bypass-proxy/: AGENTS.md  Dockerfile  README.md  captcha_collector.py  captcha_collector_selenium.py  jest.config.ts  package-lock.json  package.json  test_auto24_full.py  test_auto24_ollama.py  test_auto24_vision.py  test_ollama_vision.py  tsconfig.json
gradle/: libs.versions.toml
k8s/: auth.yaml  backend.yaml  caddy-config.local.yaml  caddy-config.yaml  caddy.yaml  captcha-solver.yaml  cloudflare-bypass-proxy.yaml  cluster-issuer.yaml  frontend.yaml  healthcheck-cronjob.yaml  healthcheck.yaml  ingress.yaml  (+6 more)
market-price-tracker/: .dockerignore  .trivyignore  Dockerfile  Dockerfile.test  GEMINI.md  main.py  models.py  price_fetcher.py  price_retrieval_job.py  pyproject.toml  requirements.test.txt  requirements.txt  scheduler.py  services.py  test_integration.py
(+1501 files in other folders)
