[project]
name = "captcha-solver"
version = "1.0.0"
description = "Deep learning-based CAPTCHA recognition service"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Konstantin Tenman" }]
keywords = ["captcha", "ocr", "deep-learning", "tensorflow", "fastapi"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "tensorflow>=2.18.0",
    "numpy>=2.0",
    "pillow>=11.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (require running service)",
]
addopts = "-v"
